--- a/MaReu/app/build.gradle
+++ b/MaReu/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'jacoco-android'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "fr.nelfdesign.mareu"
+        applicationId "com.project4.mareu"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
